--- a/workinx.html
+++ b/workinx.html
@@ -6,7 +6,7 @@
   <title>Edamam API Query to Chart.JS Testing</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="Chart.bundle.js"></script>
+  <script src="Chart.bundle.min.js"></script>
   <script src="workinw.js"></script>
   
 </head>
